[gd_scene load_steps=2 format=3 uid="uid://bg0lquiaau1ie"]

[ext_resource type="Script" path="res://scenes/guidebook_folklore.gd" id="1_d0trh"]

[node name="Folklore" type="Control"]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_d0trh")

[node name="ListBackground" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.41598, 0.41598, 0.41598, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 2
offset_right = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(700, 300)
layout_mode = 2

[node name="FolkloreName" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 30)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="FolkloreDescription" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 270)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FolkloreIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
